clusters/k3s/home-automation/homeassistant/homeassistant.Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  rules:
    - host: ha.home.elkiaer.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant
                port:
                  name: http
  tls:
    - hosts:
        - ha.home.elkiaer.net
      secretName: net-elkiaer-home-ha
